# extractor

./: .claudeignore  .gitignore  001_final_tests.json  001_test1.json  001_tests.json  002_test1.json  002_tests.json  003_test1.json  003_tests.json  004_core_tests.json  004_integration_tests.json  004_processor_tests.json  004_verification_tests.json  CHANGELOG.md  CLAUDE.md  EXTRACTOR_COMPREHENSIVE_TEST_REPORT.md  EXTRACTOR_STATUS_SUMMARY.md  MINIMAL_PDF_JSON_EXAMPLE.py  PROJECT_STRUCTURE.md  PURPOSE.md  README.md  USAGE_FUNCTION_VERIFICATION.md  debug_and_fix_extractor.py  debug_info.json  debug_python_type_hints.py  demonstrate_current_state.py  diagnose_extractor_import.py  examine_code_blocks.py  extractor_usage_function.py  final_usage_test.py  final_working_test.py  fix_surya_dependencies.py  install_dependencies.sh  marker_extractor_comparison.py  marker_mcp.json  marker_mcp_full.json  minimal_pdf_json_example.py  original_marker_isolated.py  pdf_to_json_working_poc.py  pymupdf_output.md  (+32 more)
.claude/commands/: batch-extract.md  extract-pdf.md  extract-sections.md  extract-tables.md  marker-batch-send.md  marker-receive-from.md  marker-register.md  marker-send-to.md  marker-status.md  validate-extraction.md  version.md
archive/: pyproject.toml.bak
archive/tasks/: 001_Debug_Verify_Simple_Examples.md  002_Test_Changes.md  003_Enhanced_Camelot_Table_Extraction.md  debug_arango_setup.md  debug_arango_vector_index.md  debug_document_vector_similarity.md  debug_vector_search.md  fix_code_language_detection_debug.md  verify_arangodb_operations.md
baseline_test/venv_baseline/: pyvenv.cfg
benchmarks/: verify_scores.py
benchmarks/overall/: elo.py  overall.py  registry.py  schema.py
benchmarks/table/: gemini.py  inference.py  scoring.py  table.py
benchmarks/throughput/: main.py
conf/: allowed_cities.txt
data/debug_samples/: arangodb_json_debug_20250514_114220.json  enhanced_features_debug_20250514_094724.json
data/input/: 2505.03335v2.html  2505.03335v2.md  2505.03335v2_docx_unified.json  2505.03335v2_docx_unified_v2.json  2505.03335v2_extracted.txt  2505.03335v2_extractor.json  2505.03335v2_extractor_docx.json  2505.03335v2_extractor_html.json  2505.03335v2_extractor_output.md  2505.03335v2_extractor_pdf.json  2505.03335v2_html_unified.json  2505.03335v2_html_unified_v2.json  2505.03335v2_pdf_unified.json  2505.03335v2_pdf_unified_v2.json  2505.03335v2_unified.json  2505.03335v2_unified_v3.json  extraction_comparison_results.json  six_way_comparison_results.json  visual_verification_results.json
data/json_samples/: hierarchical_output.json  regular_output.json
data/output/: 2505.03335v2_litellm_test.md  final_test_result.json  latexml_comparison_results.json  merge_analysis_test.json
data/test_unified_output/: docx_extracted.json
docker/label-studio/: .env.example  docker-compose.yml  manage.sh  test_setup.py
docs/: INDEX.md  MARKER_DEPENDENCY_ANALYSIS.md  README.md  cleanup_analysis.md
docs/01_architecture/: README.md
docs/02_api_reference/: README.md
docs/03_guides/: README.md
docs/04_integration/: README.md
docs/06_reports/: README.md
docs/99_tasks/: README.md
docs/api/: CONFIGURATION.md  MARKER_ARANGODB_API.md
docs/architecture/: DOCUMENT_MODEL_IMPROVEMENTS.md  (+2 more)
finetuning/: .env.template  README.md
logs/: cleanup_log.md  extraction_log.txt
marker/: util.py
proof_of_concept/: basic_output.json  basic_pdf_to_json.py  extract_pdf_to_json.py  extracted_output.json  marker_direct_json.py  marker_json_output.json  marker_markdown_output.json  marker_pdf_extraction.py  minimal_output.json  minimal_pdf_to_json.py  original_marker_poc.py  self_contained_pdf_to_json.py  simple_extraction_output.json  simple_pdf_extractor.py
scripts/: analyze_nested_json.py  analyze_table_count.py  check_missing_paths.py  check_processors_used.py  check_table_metadata.py  chunk_convert.py  compare_marker_extractor.py  convert.py  convert_single.py  count_blocks.py  direct_marker_import_example.py  fix_preset_high_accuracy.py  fix_table_config_imports.py  fix_test_imports.py  generate_test_report.py  generate_test_report_extractors.py  granger_daily_verify.py  isolated_marker_runner.py  marker_arangodb_workflow.py  quick_table_count.py  run_tests.sh  setup_claude_comms_repo.sh  sparta_extractor.py  test_cli_with_summaries.sh  trace_table_processing.py  validate_claude_implementation.py  validate_extractor_consistency.py
src/extractor/core/llm_call/: __init__.py  litellm_integration.py  pyproject.toml  service.py  setup.py
src/extractor/core/llm_call/cli/: __init__.py  app.py  debug_commands.py  formatters.py  schemas.py
src/extractor/core/llm_call/config/: __init__.py
src/extractor/core/llm_call/core/: __init__.py  debug.py  retry.py  strategies.py  utils.py
src/extractor/core/llm_call/docs/: contributing.md  examples.md  index.md
src/extractor/core/llm_call/validators/: __init__.py  base.py  citation.py  code.py  general.py  image.py  math.py  string_corpus.py  table.py  value.py
test_reports/: available_tests_report_20250604_141652.json  comprehensive_test_report_20250604_142107.json  default_test_report.txt  marker-module_test_report.txt
test_results/: 2505.03335v2_metadata.json  2505.03335v2_pages_0to2.md  language_detection_conclusion.md  language_detection_final.md  language_detection_summary.md  results.json  verified_results.json
tests/: BUG_REPORT.md  COMPLETE_BUG_FIX_REPORT.md  FINAL_BUG_HUNT_REPORT.md  README.md  TEST_README.md  TEST_VERIFICATION_REPORT.md  bug_report.json  check_all_languages.py  conftest.py  debug_imports.py  manual_verify_corpus_and_tree_sitter.py  pytest_markdown_report.py  run_core_tests.py  simple_verify_features.py  test_basic.py  test_basic_functionality.py  test_basic_rl.py  test_basic_rl_fixed.py  test_basic_rl_v2.py  test_core_functionality.py  test_corpus_and_tree_sitter.py  test_find_real_bugs.py  test_honeypot.py  test_json_output.py  test_llm_call_module.py  test_marker_benchmark.py  test_rl_correct.py  test_table_extraction_only.py  verify_basic_setup.py  verify_with_skepticism.py
(+883 files in other folders)
